tests/ui/parser/recover/recover-from-bad-variant.stderr
error: invalid `struct` delimiters or `fn` call arguments
  --> $DIR/recover-from-bad-variant.rs:7:13
   |
LL |     let x = Enum::Foo(a: 3, b: 4);
   |             ^^^^^^^^^^^^^^^^^^^^^
   |
help: if `Enum::Foo` is a struct, use braces as delimiters
   |
LL -     let x = Enum::Foo(a: 3, b: 4);
LL +     let x = Enum::Foo { a: 3, b: 4 };
   |
help: if `Enum::Foo` is a function, use the arguments directly
   |
LL -     let x = Enum::Foo(a: 3, b: 4);
LL +     let x = Enum::Foo(3, 4);
   |

error[E0164]: expected tuple struct or tuple variant, found struct variant `Enum::Foo`
  --> $DIR/recover-from-bad-variant.rs:10:9
   |
LL |         Enum::Foo(a, b) => {}
   |         ^^^^^^^^^^^^^^^ not a tuple struct or tuple variant
   |
help: add the names to match a struct variant's fields
   |
LL -         Enum::Foo(a, b) => {}
LL +         Enum::Foo { a, b } => {}
   |

error[E0164]: expected tuple struct or tuple variant, found struct variant `Enum::Foo`
  --> $DIR/recover-from-bad-variant.rs:12:9
   |
LL |         Enum::Foo(x, y) => {}
   |         ^^^^^^^^^^^^^^^ not a tuple struct or tuple variant
   |
help: add the names to match a struct variant's fields
   |
LL -         Enum::Foo(x, y) => {}
LL +         Enum::Foo { a: x, b: y } => {}
   |

error[E0164]: expected tuple struct or tuple variant, found struct variant `Enum::Foo`
  --> $DIR/recover-from-bad-variant.rs:14:9
   |
LL |         Enum::Foo(1 | 2, b @ 3) => {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^ not a tuple struct or tuple variant
   |
help: add the names to match a struct variant's fields
   |
LL -         Enum::Foo(1 | 2, b @ 3) => {}
LL +         Enum::Foo { a: 1 | 2, b: b @ 3 } => {}
   |

error[E0164]: expected tuple struct or tuple variant, found struct variant `Enum::Foo`
  --> $DIR/recover-from-bad-variant.rs:16:9
   |
LL |         Enum::Foo(a) => {}
   |         ^^^^^^^^^^^^ not a tuple struct or tuple variant
   |
help: add the names to match a struct variant's fields
   |
LL -         Enum::Foo(a) => {}
LL +         Enum::Foo { a, b: _ } => {}
   |

error[E0164]: expected tuple struct or tuple variant, found struct variant `Enum::Foo`
  --> $DIR/recover-from-bad-variant.rs:18:9
   |
LL |         Enum::Foo(a, b, c) => {}
   |         ^^^^^^^^^^^^^^^^^^ not a tuple struct or tuple variant
   |
help: add the names to match a struct variant's fields
   |
LL -         Enum::Foo(a, b, c) => {}
LL +         Enum::Foo { a, b } => {}
   |

error[E0769]: tuple variant `Enum::Bar` written as struct variant
  --> $DIR/recover-from-bad-variant.rs:20:9
   |
LL |         Enum::Bar { a, b } => {}
   |         ^^^^^^^^^^^^^^^^^^
   |
help: use the tuple variant pattern syntax instead
   |
LL -         Enum::Bar { a, b } => {}
LL +         Enum::Bar(a, b) => {}
   |

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0164, E0769.
For more information about an error, try `rustc --explain E0164`.
